Custom dialog box test

--- a/PasswordSaverUI/PasswordSaverUI.cbp
+++ b/PasswordSaverUI/PasswordSaverUI.cbp
@@ -68,6 +68,8 @@
 		<Unit filename="Convert.h" />
 		<Unit filename="Encryptor.cpp" />
 		<Unit filename="Encryptor.h" />
+		<Unit filename="MultiTextDialog.cpp" />
+		<Unit filename="MultiTextDialog.h" />
 		<Unit filename="PasswordSaverUIApp.cpp" />
 		<Unit filename="PasswordSaverUIApp.h" />
 		<Unit filename="PasswordSaverUIMain.cpp" />
@@ -81,6 +83,7 @@
 			<Option compile="1" />
 			<Option weight="0" />
 		</Unit>
+		<Unit filename="wxsmith/MultiTextDialog.wxs" />
 		<Unit filename="wxsmith/PasswordSaverUIframe.wxs" />
 		<Extensions>
 			<code_completion />
@@ -90,6 +93,7 @@
 				<gui name="wxWidgets" src="PasswordSaverUIApp.cpp" main="PasswordSaverUIFrame" init_handlers="necessary" language="CPP" />
 				<resources>
 					<wxFrame wxs="wxsmith/PasswordSaverUIframe.wxs" src="PasswordSaverUIMain.cpp" hdr="PasswordSaverUIMain.h" fwddecl="0" i18n="1" name="PasswordSaverUIFrame" language="CPP" />
+					<wxDialog wxs="wxsmith/MultiTextDialog.wxs" src="MultiTextDialog.cpp" hdr="MultiTextDialog.h" fwddecl="0" i18n="1" name="MultiTextDialog" language="CPP" />
 				</resources>
 			</wxsmith>
 		</Extensions>
